<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/greetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/forty_dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/hi"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/timeOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textColor="@color/white"
            android:textSize="@dimen/thirty_sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/greetings"
        android:layout_margin="@dimen/thirty_dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/songsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tewenty_dp"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/thirty_dp"
                android:text="@string/songs"
                android:gravity="center"
                android:background="@drawable/text_view_background"
                android:textColor="@color/black"
                android:textSize="@dimen/tewenty_sp" />

            <TextView
                android:id="@+id/playList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tewenty_dp"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/thirty_dp"
                android:text="@string/playlist"
                android:gravity="center"
                android:background="@drawable/text_view_background"
                android:textColor="@color/black"
                android:textSize="@dimen/tewenty_sp" />

            <TextView
                android:id="@+id/albumView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tewenty_dp"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/thirty_dp"
                android:text="@string/album"
                android:gravity="center"
                android:textAllCaps="true"
                android:background="@drawable/text_view_background"
                android:textColor="@color/black"
                android:textSize="@dimen/tewenty_sp" />

            <TextView
                android:id="@+id/artistView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tewenty_dp"
                android:padding="@dimen/tewenty_dp"
                android:text="@string/artist"
                android:textAllCaps="true"
                android:gravity="center"
                android:textSize="@dimen/tewenty_sp"
                android:background="@drawable/text_view_background"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>